#19 Eclipse Plugin: Update buildSrc to Buildship 3.0