@@ -13,32 +13,32 @@ package eclipsebuild.testing;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
+import eclipsebuild.Config;
 import eclipsebuild.Constants;
 import eclipsebuild.TestBundlePlugin;
 import org.gradle.api.GradleException;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.file.FileTree;
 import org.gradle.api.internal.file.FileResolver;
-import org.gradle.api.internal.tasks.testing.TestClassProcessor;
-import org.gradle.api.internal.tasks.testing.TestClassRunInfo;
-import org.gradle.api.internal.tasks.testing.TestCompleteEvent;
-import org.gradle.api.internal.tasks.testing.TestDescriptorInternal;
-import org.gradle.api.internal.tasks.testing.TestResultProcessor;
-import org.gradle.api.internal.tasks.testing.TestStartEvent;
-import org.gradle.api.internal.tasks.testing.detection.TestExecuter;
+import org.gradle.api.internal.tasks.testing.*;
 import org.gradle.api.internal.tasks.testing.detection.TestFrameworkDetector;
 import org.gradle.api.internal.tasks.testing.processors.TestMainAction;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.api.tasks.testing.Test;
 import org.gradle.api.tasks.testing.TestOutputEvent;
+import org.gradle.initialization.DefaultBuildCancellationToken;
+import org.gradle.internal.concurrent.DefaultExecutorFactory;
 import org.gradle.internal.operations.BuildOperationExecutor;
 import org.gradle.internal.time.Time;
 import org.gradle.process.ExecResult;
@@ -48,20 +48,22 @@ import org.gradle.process.internal.JavaExecAction;
 import org.eclipse.jdt.internal.junit.model.ITestRunListener2;
 import org.eclipse.jdt.internal.junit.model.RemoteTestRunnerClient;
 
-public final class EclipseTestExecuter implements TestExecuter {
+public final class EclipseTestExecuter implements TestExecuter<TestExecutionSpec> {
 
     private static final Logger LOGGER = Logging.getLogger(EclipseTestExecuter.class);
 
     private final Project project;
+    private final Config config;
     private final BuildOperationExecutor executor;
 
-    public EclipseTestExecuter(Project project, BuildOperationExecutor executor) {
+    public EclipseTestExecuter(Project project, Config config, BuildOperationExecutor executor) {
         this.project = project;
+        this.config = config;
         this.executor = executor;
     }
 
     @Override
-    public void execute(Test test, TestResultProcessor testResultProcessor) {
+    public void execute(TestExecutionSpec test, TestResultProcessor testResultProcessor) {
         LOGGER.info("Executing tests in Eclipse");
 
         int pdeTestPort = new PDETestPortLocator().locatePDETestPortNumber();
@@ -77,8 +79,11 @@ public final class EclipseTestExecuter implements TestExecuter {
         return (EclipseTestExtension) testTask.getProject().getExtensions().findByName("eclipseTest");
     }
 
-    private void runPDETestsInEclipse(final Test testTask, final TestResultProcessor testResultProcessor,
+    private void runPDETestsInEclipse(final TestExecutionSpec testSpec, final TestResultProcessor testResultProcessor,
             final int pdeTestPort) {
+
+        Test testTask = ((EclipseTestExecutionSpec)testSpec).getTestTask();
+
         final Object testTaskOperationId = this.executor.getCurrentOperation().getParentId();
         final Object rootTestSuiteId = testTask.getPath();
 
@@ -96,7 +101,7 @@ public final class EclipseTestExecuter implements TestExecuter {
         File equinoxLauncherFile = getEquinoxLauncherFile(testEclipseDir);
         LOGGER.info("equinox launcher file {}", equinoxLauncherFile);
 
-        final JavaExecAction javaExecHandleBuilder = new DefaultJavaExecAction(getFileResolver(testTask));
+        final JavaExecAction javaExecHandleBuilder = new DefaultJavaExecAction(getFileResolver(testTask), new DefaultExecutorFactory().create("Exec process"), new DefaultBuildCancellationToken());
         javaExecHandleBuilder.setClasspath(this.project.files(equinoxLauncherFile));
         javaExecHandleBuilder.setMain("org.eclipse.equinox.launcher.Main");
 
@@ -164,6 +169,11 @@ public final class EclipseTestExecuter implements TestExecuter {
         jvmArgs.add("-Xms40m");
         jvmArgs.add("-Xmx1024m");
 
+        // Java 9 workaround from https://bugs.eclipse.org/bugs/show_bug.cgi?id=493761
+        // TODO we should remove this option when it is not required by Eclipse
+        if (JavaVersion.current().isJava9Compatible()) {
+            jvmArgs.add("--add-modules=ALL-SYSTEM");
+        }
         // uncomment to debug spawned Eclipse instance
         // jvmArgs.add("-Xdebug");
         // jvmArgs.add("-Xrunjdwp:transport=dt_socket,address=8998,server=y");
@@ -171,6 +181,24 @@ public final class EclipseTestExecuter implements TestExecuter {
         if (Constants.getOs().equals("macosx")) {
             jvmArgs.add("-XstartOnFirstThread");
         }
+
+        // declare mirror urls if exists
+        Map<String, String> mirrorUrls = new HashMap<>();
+        if (project.hasProperty("mirrors")) {
+            String mirrorsString = (String) project.property("mirrors");
+            String[] mirrors = mirrorsString.split(",");
+            for (String mirror : mirrors) {
+                if (!"".equals(mirror)) {
+                    String[] nameAndUrl = mirror.split(":", 2);
+                    mirrorUrls.put(nameAndUrl[0], nameAndUrl[1]);
+                }
+            }
+        }
+
+        for (Map.Entry<String, String> mirrorUrl : mirrorUrls.entrySet()) {
+            jvmArgs.add("-Dorg.eclipse.buildship.eclipsetest.mirrors." + mirrorUrl.getKey() + "=" + mirrorUrl.getValue());
+        }
+
         javaExecHandleBuilder.setJvmArgs(jvmArgs);
         javaExecHandleBuilder.setWorkingDir(this.project.getBuildDir());
 
@@ -252,7 +280,12 @@ public final class EclipseTestExecuter implements TestExecuter {
         return processor.classNames;
     }
 
+    @Override
+    public void stopNow() {
+
+    }
     public static final class NoOpTestResultProcessor implements TestResultProcessor {
+
 
         @Override
         public void started(TestDescriptorInternal testDescriptorInternal, TestStartEvent testStartEvent) {
@@ -286,6 +319,11 @@ public final class EclipseTestExecuter implements TestExecuter {
 
         @Override
         public void stop() {
+            // no-op
+        }
+
+        @Override
+        public void stopNow() {
             // no-op
         }
     }
